turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:53: error: not found: value Direction
      setDirection(Direction.OUEST)
                   ^Turmite:56: error: not found: value Direction
      setDirection(Direction.EST)
                   ^Turmite:62: error: not found: value Direction
      setDirection(Direction.NORD)
                   ^Turmite:65: error: not found: value Direction
      setDirection(Direction.SUD)
                   ^Turmite:70: error: not found: value newArray
    rule(i) = newArray[Int](2); //2 couleurs par etat
              ^Turmite:72: error: value update is not a member of Int
  rule(0)(0) = Array(1, RIGHT, 0)
      ^Turmite:73: error: value update is not a member of Int
  rule(0)(1) = Array(1, RIGHT, 1)
      ^Turmite:74: error: value update is not a member of Int
  rule(1)(0) = Array(0, NOTURN, 0)
      ^Turmite:75: error: value update is not a member of Int
  rule(1)(1) = Array(0, NOTURN, 1)
      ^